Endret shopping-app i henhold til kommentarer
Blant annet bedre innkapsling og mindre komplisert app